fix(ui): File drop zone alignment

--- a/packages/admin/src/styles/parts/fileInput.css
+++ b/packages/admin/src/styles/parts/fileInput.css
@@ -16,10 +16,11 @@
 
 :where(.fileInput-dropZone) {
 	min-height: 8.125em;
-	display: flex;
+}
+
+:where(.fileInput-dropZone > .cui-box-body) {
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
 }
 
 :where(.fileInput-dropZone:last-child:nth-child(1)) {
